@@ -1,6 +1,11 @@
 CHANGELOG RoundCube Webmail
 ---------------------------
 
+2008/08/14 (thomasb)
+----------
+- Use current mailbox name in template (#1485256)
+- Better fix for skipping untagged responses (#1485261)
+
 2008/08/09 (alec)
 ----------
 - Case insensitive contacts searching using PostgreSQL (#1485259)
